# tpmp-gr10b-lab4-bibki

./: CMakeLists.txt  README.md
database/: schema.sql
docs/: index.md  Петраков Хмель ПИ Гр 10.docx
includes/: database.h
src/: database.c  main.c
